--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "dotenv": "^17.2.0",
     "express": "~4.16.4",
+    "multer": "^1.4.5-lts.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
     "morgan": "~1.9.1"
@@ -23,6 +24,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^1.4.12",
     "@types/node": "^24.0.14",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
